fix the map info message visibility in light mode

--- a/css/style.css
+++ b/css/style.css
@@ -236,7 +236,7 @@ a.leaflet-popup-close-button {
 .map__message {
   font-family: "Mulish", sans-serif;
   opacity: 0.85;
-  color: black;
+  color: var(--color-grey-dark-4);
   font-size: 1.6rem;
   font-weight: 600;
   width: 30rem;
