--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -210,7 +210,7 @@ a.leaflet-popup-close-button {
 .map__message {
   font-family: $font-primary;
   opacity: 0.85;
-  color: black;
+  color: var(--color-grey-dark-4);
   font-size: 1.6rem;
   font-weight: 600;
   width: 30rem;
